--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.0.3"
   }
 }
