--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "nodemailer": "^7.0.6",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "stripe": "^19.0.0"
   }
 }
